# vjj

./: Cargo.toml  README.md  jj-config-overrides.toml  keymap.ron
.github/ISSUE_TEMPLATE/: bug_report.md
src/: common.rs  fzf.rs  main.rs
src/shell/: command.rs  exec.rs  fzf_binding.rs  keymap.rs  mod.rs
