[package]
name = "vjj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.4", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
copypasta = "0.10.1"
ctty = "0.1.0"
itertools = "0.12.1"
leon = "3.0.1"
once_cell = "1.19.0"
ron = "0.9.0-alpha.0"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
